static/styles/styles2.css
@import url('https://fonts.googleapis.com/css?family=Source+Sans+Pro');
@import url('https://fonts.googleapis.com/css?family=Rubik');
@import url('https://fonts.googleapis.com/css?family=Inconsolata');
body {
  padding: 0;
  margin: 0;
}

html, body {
  height: 100%;
}

h2, h5 {
  font-weight: bold;
}

.btn, select {
  border-radius: 0 !important;
}

select {
  margin-bottom: 0;
  padding-bottom: 0;
}

input {
  margin-bottom: 50px;
}

#map-holder {
  padding-bottom: 1em;
}

.buttons {
  position: fixed;
  bottom: 0;
  left: 0;
  margin-bottom: 3%;
  margin-left: 15px;
  max-width: 50%;
}

.btn.btn-outline-success {
  border: 1px solid #fff;
  color: #fff;
  background: #DC3D4C;
}

.btn.btn-outline-success:hover, .btn.btn-outline-success:focus, .btn.btn-outline-success:active, .btn.btn-outline-success.active {
  border: 1px solid #fff !important;
  color: #DC3D4C !important;
  background: #fff !important;
}

.btn-toolbar .btn {
  margin-top: 5px;
  margin-right: 5px;
}

.container-fluid {
  font-family: 'Inconsolata';
  color: #555853;
  width: 100%;
  height: 100%;
  display: block;
  position: relative;
}

.container-fluid::after {
  content: "";
  background-image: url("../images/topography.png");
  background-repeat: repeat;
  opacity: 0.7;
  top: 0;
  left: 0;
  bottom: 0;
  right: 0;
  position: absolute;
  z-index: -1;
}

/* to keep gallery at an appropriate height */

.fixed {
  height: 38vh;
  overflow: scroll;
}

.bg {
  background-color: #CDDBC3;
  border-style: solid;
  border-width: 1px;
  border-radius: 5px;
  border-color: #CDDBC3;
  padding: 2%;
  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
}

.btnbg {
  width: 87vh;
  color: #FDF7F6;
  background-color: #DC3D4C;
  border-style: solid;
  border-width: 1px;
  border-radius: 5px;
  border-color: #DC3D4C;
  padding: 2%;
  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
}

#map {
  border-style: solid;
  border-width: 1px;
  border-color: #555450;
}

.carousel-item {
  text-align: center;
}

.carousel-inner img {
  display: inline-block !important;
}

.carousel-inner>.carousel-item>img {
  height: 300px;
  width: 300px;
  object-fit: contain;
}

#visitor_form {
  display: none;
  position: fixed;
  z-index: 10000;
  overflow: auto;
  background-color: white;
  border-style: solid;
  border-width: 1px;
  border-color: #555450;
  margin-left: 50%;
  width: 40vh;
  height: 35vh;
}

#actual_popup {
  padding: 5%;
  position: absolute;
}

#send_suggestion {
  background-color: green;
  margin-top: 5%;
}

#close_suggestion {
  margin-top: 5%;
}

.parkinfo {
  padding: 0;
}

